--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
 </head>
 
 <body>
-    <img src="images/logo.png" alt="Logo Robbie Lens">
-    <a href="a-propos.html">À propos</a>
+     <div>
+        <img src="images/logo.png" alt="Logo Robbie Lens">
+        <a href="a-propos.html">À propos</a>
+     </div>
     <h1>Photographie</h1>
     <p>
-        Où professionalisme s’allie avec passion. Depuis plus de 5 ans maintenant, j’exerce mon métier avec la passion
+        Où <span>professionalisme</span> s’allie avec passion. Depuis plus de 5 ans maintenant, j’exerce mon métier avec la passion
         qui m’anime : capturer l’essence de chaque instant.
     </p>
-    <img src="images/robbie-lens.png" alt="Portrait de la photographe Robbie Lens">
-    <img src="images/logo.png" alt="Logo Robbie Lens">
-    <a target="_blank" href="https://twitter.com/">
+    <div>
+        <img src="images/robbie-lens.png" alt="Portrait de la photographe Robbie Lens">
+        <img src="images/logo.png" alt="Logo Robbie Lens">
+        <a target="_blank" href="https://twitter.com/">
         <img src="images/twitter.png" alt="Logo Twitter">
-    </a>
-    <a target="_blank" href="https://www.instagram.com/">
+        </a>
+        <a target="_blank" href="https://www.instagram.com/">
         <img src="images/instagram.png" alt="Logo Instagram">
     </a>
+    </div>
 </body>
 
 </html>
